option('enable-tracing', type: 'boolean', value: false)
option('enable-profiling', type: 'boolean', value: false)

option('with-ui', type: 'boolean')
option('with-webkit', type: 'boolean')
option('with-help', type: 'boolean')
option('with-docs', type: 'boolean')
option('with-examples', type: 'boolean', value: false)
option('with-tests', type: 'boolean')

option('with-valadoc', type: 'boolean', value: false)

# Plugins
# Ideally we want many of these to be defined in the plugin dir:
#   https://github.com/mesonbuild/meson/issues/707
option('with-backend-xml', type: 'boolean')
option('with-controller-pid', type: 'boolean')
option('with-device-arduino', type: 'boolean')
option('with-device-comedi', type: 'boolean')
option('with-device-mccusb', type: 'boolean')
option('with-device-signal-generator', type: 'boolean', value: false)
