schema_dir = join_paths(get_option('datadir'), 'glib-2.0', 'schemas')

install_data([
  'org.opendcs.dcs.control.loop.gschema.xml',
  'org.opendcs.dcs.daq.device.gschema.xml',
  'org.opendcs.dcs.log.backend.gschema.xml',
  'org.opendcs.dcsg.gschema.xml',
  'org.opendcs.dcsg.plugin.gschema.xml',
], install_dir: schema_dir)
